--- a/folder/templates/reset_mail.html
+++ b/folder/templates/reset_mail.html
@@ -458,7 +458,7 @@
                     <td class="content-cell">
                       <div class="f-fallback">
                         <h1>Hi {{name}},</h1>
-                        <p>You recently requested to reset your password for your  account. Use the button below to reset it. <strong>This password reset is only valid for the next 15 minutes.</strong></p>
+                        <p>You recently requested to verify your account. Use the button below to reset it. <strong>This pbutton is only valid for the next 15 minutes.</strong></p>
                         <!-- Action -->
                         <table class="body-action" align="center" width="100%" cellpadding="0" cellspacing="0" role="presentation">
                           <tr>
@@ -468,25 +468,25 @@
                               <table width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
                                 <tr>
                                   <td align="center">
-                                    <a href="{{action_url}}" class="f-fallback button button--green" target="_blank">Reset your password</a>
+                                    <a href="{{action_url}}" class="f-fallback button button--green" target="_blank">Verify Account</a>
                                   </td>
                                 </tr>
                               </table>
                             </td>
                           </tr>
                         </table>
-                        <p>For security, this request was received from a {{operating_system}} device using {{browser_name}}. If you did not request a password reset, please ignore this email or <a href="{{support_url}}">contact support</a> if you have questions.</p>
+                        <p>If you did not request a password reset or confirmation mail , please ignore this email or <a href="{{support_url}}">contact support</a> if you have questions.</p>
                         <p>Thanks,
                           <br>The Health Manager team</p>
                         <!-- Sub copy -->
-                        <table class="body-sub" role="presentation">
+                        <!-- <table class="body-sub" role="presentation">
                           <tr>
                             <td>
                               <p class="f-fallback sub">If you’re having trouble with the button above, copy and paste the URL below into your web browser.</p>
                               <a  href= "{{action_url}}" class="f-fallback sub">{{action_url}}</p>
                             </td>
                           </tr>
-                        </table>
+                        </table> -->
                       </div>
                     </td>
                   </tr>
