made changes to the authentication

--- a/folder/templates/verification.html
+++ b/folder/templates/verification.html
@@ -38,7 +38,7 @@
                             <tr>
                                 <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 40px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
                                     <p style="margin: 0;">We're excited to have you get started. First, you need to confirm your account.</p>
-                                    <p style="margin: 0;"> Below is your OTP code for verification which expires in 5 minutes. </p>
+                                    <p style="margin: 0;"> Below is your OTP which expires in some minutes. </p>
                                 </td>
                             </tr>
                             <tr>
@@ -48,7 +48,7 @@
                                             <td bgcolor="#ffffff" align="center" style="padding: 0px 60px 30px 30px;">
                                                 <table border="0" cellspacing="0" cellpadding="0">
                                                     <tr>
-                                                        <h2>{code}</h2>
+                                                        <h2>{{code}}</h2>
                                                     </tr>
                                                 </table>
                                             </td>
@@ -60,12 +60,12 @@
                             
                             <tr>
                                 <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 20px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                                    <p style="margin: 0;">If you have any questions, just send a message to this email {support_mail};<br><p>We're always happy to help out.</p>
+                                    <p style="margin: 0;">If you have any questions, just send a message to this email {{support_mail}};<br><p>We're always happy to help out.</p>
                                 </td>
                             </tr>
                             <tr>
                                 <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 40px 30px; border-radius: 0px 0px 4px 4px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                                    <p style="margin: 0;">Cheers,<br>WURAFADAKA</p>
+                                    <p style="margin: 0;">Cheers,HM</p>
                                 </td>
                             </tr>
                         </table>
@@ -88,7 +88,7 @@
                         <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                             <tr>
                                 <td bgcolor="#f4f4f4" align="left" style="padding: 0px 30px 30px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 14px; font-weight: 400; line-height: 18px;"> <br>
-                                    <p style="text-align: center;">&copy;WURAFADAKA 2022</p>
+                                    <p style="text-align: center;">&copy;HM 2023</p>
                                 </td>
                             </tr>
                         </table>
