created new page for sending admin mails for updated admin_keys and changed background colour of the mail being sent

--- a/folder/templates/verification.html
+++ b/folder/templates/verification.html
@@ -6,14 +6,14 @@
             <meta name="viewport" content="width=device-width, initial-scale=1">
             <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         </head>
-        <body style="background-color: #808000; margin: 0 !important; padding: 0 !important;">
+        <body style="background-color: #2c7da2; margin: 0 !important; padding: 0 !important;">
             <!-- HIDDEN PREHEADER TEXT -->
-            <div style="display: none; font-size: 1px; color:#808000; line-height: 1px; font-family: 'Lato', Helvetica, Arial, sans-serif; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden;"> We're thrilled to have you here! Get ready to dive into your new account.
+            <div style="display: none; font-size: 1px; color:#2c7da2; line-height: 1px; font-family: 'Lato', Helvetica, Arial, sans-serif; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden;"> We're thrilled to have you here! Get ready to dive into your new account.
             </div>
             <table border="0" cellpadding="0" cellspacing="0" width="100%">
                 <!-- LOGO -->
                 <tr>
-                    <td bgcolor="#808000" align="center">
+                    <td bgcolor="#2c7da2" align="center">
                         <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                             <tr>
                                 <td align="center" valign="top" style="padding: 40px 10px 40px 10px;"> </td>
@@ -22,11 +22,11 @@
                     </td>
                 </tr>
                 <tr>
-                    <td bgcolor="#808000" align="center" style="padding: 0px 10px 0px 10px;">
+                    <td bgcolor="#2c7da2" align="center" style="padding: 0px 10px 0px 10px;">
                         <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                             <tr>
                                 <td bgcolor="#ffffff" align="center" valign="top" style="padding: 40px 20px 20px 20px; border-radius: 4px 4px 0px 0px; color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 48px; font-weight: 400; letter-spacing: 4px; line-height: 48px;">
-                                    <img src="https://res.cloudinary.com/dgpnmwhra/image/upload/v1657052121/welcome_image_gzw5yf.webp" width="125" height="120" style="display: block; border: 0px;" />
+                                    <img src="https://img.icons8.com/?size=2x&id=61906&format=png" width="125" height="120" style="display: block; border: 0px;" />
                                 </td>
                             </tr>
                         </table>
@@ -88,7 +88,7 @@
                         <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                             <tr>
                                 <td bgcolor="#f4f4f4" align="left" style="padding: 0px 30px 30px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 14px; font-weight: 400; line-height: 18px;"> <br>
-                                    <p style="text-align: center;">&copy;HM 2023</p>
+                                    <p style="text-align: center;">&copy;HM {{year}}</p>
                                 </td>
                             </tr>
                         </table>
